fix: debug of dark mode support in data table

--- a/src/assets/styles/global.scss
+++ b/src/assets/styles/global.scss
@@ -147,7 +147,6 @@ div[contenteditable] {
 .app-card {
   padding: 1em;
   border-radius: 0.2rem;
-  background: linear-gradient(315deg, #ffffff, #ffffff);
   box-shadow: rgba(99, 99, 99, 0.1) 0px 2px 8px 0px !important;
   //border: 3px dashed transparent !important;
 }
